services/gin-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gin-api
  labels:
    app: gin-api
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gin-api
      version: v1
  template:
    metadata:
      labels:
        app: gin-api
        version: v1
    spec:
      containers:
        - name: gin-api
          image: shuheikawamura243/gin-api:21c26c8d247cadae1fef7654a576a038e3cb9676
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gin-api
  labels:
    app: gin-api
    service: gin-api
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: gin-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gin-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - api.shukawam.me
      secretName: shukawam-me-gin-api-tls
  rules:
    - host: api.shukawam.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gin-api
                port:
                  number: 8080
