services/quacklyzer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quacklyzer
  labels:
    app: quacklyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quacklyzer
  template:
    metadata:
      labels:
        app: quacklyzer
    spec:
      containers:
        - name: quacklyzer
          image: shuheikawamura243/quacklyzer:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: quacklyzer
  labels:
    app: quacklyzer
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: quacklyzer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quacklyzer-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - quacklyzer.shukawam.me
      secretName: shukawam-me-quacklyzer-tls
  rules:
    - host: quacklyzer.shukawam.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quacklyzer
                port:
                  number: 3000
